修复颜色转换算法，及部分机型上花屏问题

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,11 +35,29 @@
         app:layout_constraintStart_toStartOf="@id/btn_stop_record_main_activity"
         app:layout_constraintTop_toBottomOf="@id/btn_stop_record_main_activity" />
 
+    <androidx.constraintlayout.utils.widget.MotionButton
+        android:id="@+id/btn_play_main_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="播放上次录制"
+        app:layout_constraintStart_toStartOf="@id/btn_capture_record_main_activity"
+        app:layout_constraintTop_toBottomOf="@id/btn_capture_record_main_activity" />
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_capture_main_activity"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="#123456"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <VideoView
+        android:visibility="gone"
+        android:id="@+id/video_view_main_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="#623456"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
